# VoiceCode

./: .gitignore  CLAUDE.md  COMPREHENSIVE_COMPETITIVE_ANALYSIS.md  CRITICAL_TECHNICAL_DEBT_FIXES.md  DIRECTORY_STRUCTURE_ANALYSIS.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  PAYMENT_INTEGRATION_GUIDE.md  PHASE_3_WEB_APP_COMPLETE.md  PHASE_5B_DIRECTORY_RENAME_STATUS.md  PHASE_5_REPOSITORY_ANALYSIS.md  SPEC.md  TASK_COMPLETION_REPORT.md  package-lock.json  package.json  verify.md  vscode_extension_2025-12-18T04-51-26.md
.claude/: README.md  settings.json  settings.local.json
.claude/agents/: bug-fixer.md  coding-agent-engineer.md  documentation.md  express-api-builder.md  monorepo-mobile-builder.md  performance-tuner.md  (+11 more)
.github/: copilot-instructions.md
VoiceCode/: CLAUDE.md  INTEGRATION_COMPLETE.md  MOBILE_APP_IMPLEMENTATION_REPORT.md  QUICK_START.md  README.md  VOICEFLOW_PRO_INTEGRATION_PLAN.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
VoiceCode/apps/desktop/src-tauri/: .gitignore  Cargo.toml  build_check.txt  build_check2.txt  build_check3.txt  build_err.txt  build_errors.txt  build_errors10.txt  build_errors11.txt  build_errors12.txt  build_errors13.txt  build_errors14.txt  build_errors15.txt  build_errors16.txt  build_errors17.txt  build_errors18.txt  build_errors19.txt  build_errors2.txt  build_errors20.txt  build_errors21.txt  build_errors22.txt  build_errors23.txt  build_errors24.txt  build_errors3.txt  build_errors4.txt  build_errors5.txt  build_errors6.txt  build_errors7.txt  build_errors8.txt  build_errors9.txt  build_errors_bin.txt  build_errors_bin2.txt  build_errors_bin3.txt  build_errors_final.txt  build_errors_final2.txt  build_errors_full.txt  check_events.ps1  tauri.conf.json
VoiceCode/apps/desktop/src-tauri/.cargo/: config.toml
VoiceCode/apps/desktop/src-tauri/src/: app_aware_formatting.rs  audio_capture.rs  code_vocabulary.rs  coding_agent.rs  computer_vision.rs  encryption.rs  error_boundary.rs  errors.rs  global_dictation.rs  lib.rs  logging.rs  main.rs  memory.rs  natural_language_commands.rs  performance.rs  screen_context.rs  streaming.rs  validation.rs
VoiceCode/apps/desktop/src-tauri/src/cli/: agent_protocol.rs  agent_registry.rs  code_intelligence_bridge.rs  commands.rs  consensus.rs  enhanced_agents.rs  external_agents.rs  internal_agents.rs  mcp.rs  memory.rs  mod.rs  multi_agent.rs  orchestrator.rs  permissions.rs  persistence.rs  pipeline.rs  repl.rs  streaming_parser.rs  subagents.rs  templates.rs  validation.rs
VoiceCode/apps/desktop/src-tauri/src/code_intelligence/: agent_skills.rs  ambient_intelligence.rs  analytics.rs  ast_engine.rs  chunker.rs  code_graph.rs  context_builder.rs  context_integration.rs  context_lineage.rs  doc_indexer.rs  dynamic_budget.rs  feedback_system.rs  few_shot_db.rs  ide_bridge.rs  intent_classifier.rs  llm_client.rs  mcp_oauth.rs  mcp_servers.rs  meta_agent.rs  mod.rs  multi_repo.rs  offline_mode.rs  plugin_system.rs  project_indexer.rs  prompt_engineering.rs  recitation.rs  sandbox.rs  self_verification.rs  semantic_search.rs  symbol_table.rs  task_planner.rs  team_knowledge.rs  token_budget.rs  tribal_knowledge.rs  unified_context.rs  voice_grammar.rs  voice_streaming.rs
VoiceCode/apps/desktop/src-tauri/src/commands/: audio.rs  cache_commands.rs  code_intelligence_commands.rs  encryption_commands.rs  files.rs  logging_commands.rs  memory_commands.rs  mod.rs  settings.rs  stt.rs  transcription.rs
VoiceCode/apps/desktop/src-tauri/src/file_tagging/: detector.rs  fuzzy_search.rs  mod.rs
VoiceCode/apps/desktop/src-tauri/src/integrations/: ai_ml_api.rs  ai_ml_core.rs  ai_text_processor.rs  context_processor.rs  mod.rs  text_enhancement.rs  translation_service.rs  voice_generation.rs  voice_recognition.rs
VoiceCode/apps/desktop/src-tauri/src/stt/: deepgram.rs  mod.rs  post_processor.rs  provider.rs  whisper.rs
VoiceCode/apps/desktop/src-tauri/src/vision/: browser_agent.rs  computer_use.rs  file_agent.rs  mod.rs  ocr_engine.rs  omniparser.rs  visual_explainer.rs
VoiceCode/apps/desktop/src-tauri/tests/: integration_tests.rs
VoiceCode/services/agent-core/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
VoiceCode/services/agent-core/.github/workflows/: test.yml
VoiceCode/services/agent-core/scripts/: run_tests.py
VoiceCode/services/agent-core/sdk/typescript/: package.json
VoiceCode/services/agent-core/sdk/typescript/src/: client.ts  hooks.ts  index.ts  types.ts
VoiceCode/services/agent-core/src/: __init__.py
VoiceCode/services/agent-core/src/agents/: __init__.py  supervisor.py
VoiceCode/services/agent-core/src/api/: __init__.py  main.py
VoiceCode/services/agent-core/src/config/: __init__.py  settings.py
VoiceCode/services/agent-core/src/models/: __init__.py  state.py
VoiceCode/services/agent-core/src/rag/: __init__.py  hybrid_search.py  indexer.py  retriever.py
VoiceCode/services/agent-core/src/services/: __init__.py  database.py  transcript_service.py
VoiceCode/services/agent-core/src/tools/: __init__.py  automation_tools.py  export_tools.py  medical_tools.py  productivity_tools.py  registry.py  search_tools.py  transcription_tools.py
VoiceCode/services/agent-core/tests/: __init__.py  conftest.py
VoiceCode/services/agent-core/tests/integration/: __init__.py  test_api_endpoints.py  test_database_service.py  test_end_to_end.py  test_rag_layer.py  test_supervisor_agent.py
VoiceCode/services/agent-core/tests/unit/: __init__.py  test_registry.py  test_state_models.py  test_tools_automation.py  test_tools_export.py  test_tools_medical.py  test_tools_productivity.py  test_tools_search.py  test_tools_transcription.py
VoiceCodeMobile/: App.tsx  app.json  eas.json  package-lock.json  package.json  rebrand-mobile.js
VoiceFlow-PRO/: EXTERNAL_REPO_ANALYSIS_AND_REBRANDING.md  INTEGRATED_ACTION_PLAN.md  REBRANDING_STATUS_REPORT.md  REBRANDING_SUMMARY.md
tasks/: todo.md
voiceflow-pro-ui/: package.json  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
(+1591 files in other folders)
