[package]
name = "voicecode-desktop"
version = "1.0.0"
description = "VoiceCode - AI-Powered Voice & Text Coding Assistant"
authors = ["VoiceCode Team"]
license = "MIT"
repository = "https://github.com/voicecode/desktop"
default-run = "voicecode-desktop"
edition = "2021"
rust-version = "1.72"

[lib]
name = "voicecode_desktop"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-show", "window-start-dragging", "notification-all", "fs-read-dir", "fs-exists", "dialog-all", "window-maximize", "window-close", "fs-read-file", "window-unmaximize", "window-unminimize", "global-shortcut-all", "window-minimize", "window-hide", "fs-create-dir", "fs-write-file", "global-shortcut", "notification", "os-all", "path-all", "process-all", "protocol-asset", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
crossbeam-channel = "0.5"
async-trait = "0.1"
regex = "1.0"
walkdir = "2.3"
sanitize-filename = "0.5"
http = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
lru = "0.12"
log = "0.4"
once_cell = "1.19"
chrono = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
enigo = "0.2"
clipboard = "0.5"

# ============================================
# Phase 1-6: Context Engine Dependencies
# ============================================

# AST Parsing (Phase 1.1)
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.6"
tree-sitter-css = "0.23"
tree-sitter-html = "0.23"
tree-sitter-md = "0.3"

# Token Counting (Phase 3)
tiktoken-rs = "0.5"

# File Watching (Phase 1.3)
notify = "6.1"
notify-debouncer-mini = "0.4"

# Embeddings & Vector Search (Phase 2)
# fastembed = "3"  # Enable when ready
# lancedb = "0.4"  # Enable when ready

# IPC/WebSocket (Phase 6)
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Concurrent Collections
dashmap = "5"
parking_lot = "0.12"

# Path handling
ignore = "0.4"
globset = "0.4"

# Additional utilities
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"
rayon = "1.10"

# CLI dependencies
clap = { version = "4", features = ["derive", "env", "cargo"] }
rustyline = "14"
colored = "2"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "voicecode-desktop"
path = "src/main.rs"

[[bin]]
name = "voicecode"
path = "src/bin/voicecode.rs"

[package.metadata.bundle]
name = "VoiceCode"
identifier = "com.voicecode.desktop"
version = "1.0.0"
category = "Productivity"
short_description = "VoiceFlow Pro - Cross-platform Desktop Voice Assistant"
long_description = """
VoiceFlow Pro is a powerful cross-platform desktop voice assistant application.
It provides advanced voice recognition, natural language processing, and intelligent 
automation capabilities across Windows, macOS, and Linux platforms.
"""
authors = ["VoiceFlow Pro Team"]
copyright = "Copyright © 2025 VoiceFlow Pro Team"
license = "MIT"
homepage = "https://voiceflow.pro"
repository = "https://github.com/voiceflow-pro/desktop"
